# dvd-animation

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
app/: main.cpp
cmake/: config_flags.cmake
